--- a/public_html/SelectReportChoice.html
+++ b/public_html/SelectReportChoice.html
@@ -14,7 +14,7 @@
 <select id="selection" name="selection" onClick="GetReports()">
         <option value="default">Select a report</option>
 </select><br>
-<button type="button" class="submit" id="EditButton"> Submit </button>
+<button type="button" class="submit" id="EditButton" onClick="SaveData()"> Submit </button>
 <p id="dummy"></p>
 </body>
 
