Fixed a silly mistake that prevented the drop down for selecting a report to work

--- a/public_html/SelectReportChoice.html
+++ b/public_html/SelectReportChoice.html
@@ -25,6 +25,8 @@
 </div>
 <!--Element used for verifying that the page is working properly-->
 <p id="dummy"></p>
+<p id="dummy2"></p>
+<p id="dummy3"></p>
 </body>
 
 </html>
