Added a button to redirect to index.php

--- a/public_html/adminLogin.html
+++ b/public_html/adminLogin.html
@@ -20,6 +20,8 @@
                         <!--Buttons for submitting and resetting-->
                         <input type="submit" value="Login" name="submit" id="submit"/>
                         <input type="reset" value="Reset" id="reset"/>
+                        <button type="button" class="exit" id="exit"><a href="index.php" id="ExitLink"> Exit </a></button>
+
                 </form>
 	</body>	
 </html>
